@@ -31,6 +31,7 @@ Please visit http://aegisub.net to download latest version
 - Fixed some bugs related to inserting overrides via the buttons over the edit box (AMZ)
 - Implemented Redo (AMZ)
 - Fonts collector will now default collection to same folder as script (Set to "?script" on config.dat) (AMZ)
+- Alt+Left/Right on the video seek bar will now seek by increments of 10 frames (increment is customizeable in config.dat) (AMZ)
 
 
 = 1.09 beta - 2006.01.16 ===========================
